samples/_failures_safe/1761708729_529255_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e5a54c15.c: In function ‘print_state’:
./samples/SAFE/__tmp_e5a54c15.c:160:16: error: missing terminating " character
  160 |         printf("Current
      |                ^~~~~~~~
./samples/SAFE/__tmp_e5a54c15.c:160:9: error: expected expression at end of input
  160 |         printf("Current
      |         ^~~~~~
./samples/SAFE/__tmp_e5a54c15.c:160:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_e5a54c15.c:160:9: error: expected declaration or statement at end of input
